welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: reassignment to val
		cp = cp + 1
                   ^